src/cli/split_view/snapshots/parari__cli__split_view__tests__snapshot_tests__render_split_view_diff_mode.snap
---
source: src/cli/split_view/tests.rs
expression: terminal.backend()
---
"+> Models ---------------------++ Diff ------------------------------------------------------------+"
"|> [bot] claude [+] (2 files)     ||+++ b/src/main.rs                                                 |" Hidden by multi-width symbols: [(4, " ")]
"|  * gemini [+] (3 files)     ||--- a/src/main.rs                                                 |" Hidden by multi-width symbols: [(4, " ")]
"|  [pkg] codex [x] (0 files)      ||@@ -1,3 +1,5 @@                                                   |" Hidden by multi-width symbols: [(4, " ")]
"|                              || fn main() {                                                      |"
"|                              ||+    println!("Hello");                                           |"
"|                              ||     run();                                                       |"
"|                              || }                                                                |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"+------------------------------++------------------------------------------------------------------+"
" j/k  Select   Tab/l  Details   L  Log   D  Diff   a/Enter  Apply   q  Quit                         "
