src/cli/split_view/snapshots/parari__cli__split_view__tests__snapshot_tests__render_split_view_empty_results.snap
---
source: src/cli/split_view/tests.rs
expression: terminal.backend()
---
"+> Models ---------------------++ Log -------------------------------------------------------------+"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"+------------------------------++------------------------------------------------------------------+"
" j/k  Select   Tab/l  Details   L  Log   D  Diff   a/Enter  Apply   q  Quit                         "
