src/cli/split_view/snapshots/parari__cli__split_view__tests__snapshot_tests__render_split_view_failed_model_selected.snap
---
source: src/cli/split_view/tests.rs
expression: terminal.backend()
---
"+> Models ---------------------++ Log -------------------------------------------------------------+"
"|  [bot] claude [+] (2 files)     ||[pkg] CODEX - Failed                                                 |" Hidden by multi-width symbols: [(4, " "), (34, " ")]
"|  * gemini [+] (3 files)     ||==================================================                |" Hidden by multi-width symbols: [(4, " ")]
"|> [pkg] codex [x] (0 files)      ||                                                                  |" Hidden by multi-width symbols: [(4, " ")]
"|                              ||Summary:                                                          |"
"|                              ||  Files changed: 0                                                |"
"|                              ||                                                                  |"
"|                              ||--------------------------------------------------                |"
"|                              ||Output:                                                           |"
"|                              ||--------------------------------------------------                |"
"|                              ||Starting task...                                                  |"
"|                              ||Error: Something went wrong                                       |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"+------------------------------++------------------------------------------------------------------+"
" j/k  Select   Tab/l  Details   L  Log   D  Diff   a/Enter  Apply   q  Quit                         "
